UPDATE: Melhoria no Exemplo

--- a/jquery.loader.html
+++ b/jquery.loader.html
@@ -93,7 +93,7 @@
 		});
 
 		$('#bt_teste3').click(function(){
-			$('#div_teste3').loader({imgUrl: 'http://www.ferrostaal.com/typo3conf/ext/edit_contactform/res/template/preloader.gif'});
+			$('#div_teste3').loader({imgUrl: 'http://s2672252.com/7018QCA/7018qca_final/images/preloader.gif'});
 			return false;
 		});
 		
