Centralização Horizontal e Vertical

--- a/jquery.loader.html
+++ b/jquery.loader.html
@@ -18,7 +18,7 @@
 			<p><code><pre>$('#div_teste0').loader();</pre></code></p>
 			<p><code><pre>$('#div_teste0').loader('end');</pre></code></p>
 			<div class="sample0">
-				<div id="div_teste0">Conteudo</div>
+				<div style="height: 250px;" id="div_teste0">Conteudo</div>
 			</div>
 			<button type="button" id="bt_teste0">Carregar</button>
 			<button type="button" id="bt_teste_end0">Concluido</button>
@@ -30,7 +30,7 @@
 			<p><code><pre>$('#div_teste1').loader({color: 'white'});</pre></code></p>
 			<p><code><pre>$('#div_teste1').loader('end');</pre></code></p>
 			<div class="sample1">
-				<div id="div_teste1">Conteudo</div>
+				<div style="height: 250px;" id="div_teste1">Conteudo</div>
 			</div>
 			<button type="button" id="bt_teste1">Carregar</button>
 			<button type="button" id="bt_teste_end1">Concluido</button>
@@ -42,7 +42,7 @@
 			<p><code><pre>$('#div_teste2').loader({color: 'black'});</pre></code></p>
 			<p><code><pre>$('#div_teste2').loader('end');</pre></code></p>
 			<div class="sample2">
-				<div id="div_teste2">Conteudo</div>
+				<div style="height: 250px;" id="div_teste2">Conteudo</div>
 			</div>
 			<button type="button" id="bt_teste2">Carregar</button>
 			<button type="button" id="bt_teste_end2">Concluido</button>
@@ -54,7 +54,7 @@
 			<p><code><pre>$('#div_teste3').loader({imgUrl: 'http://www.ferrostaal.com/typo3conf/ext/edit_contactform/res/template/preloader.gif'});</pre></code></p>
 			<p><code><pre>$('#div_teste3').loader('end');</pre></code></p>
 			<div class="sample3">
-				<div id="div_teste3">Conteudo</div>
+				<div style="height: 250px;" id="div_teste3">Conteudo</div>
 			</div>
 			<button type="button" id="bt_teste3">Carregar</button>
 			<button type="button" id="bt_teste_end3">Concluido</button>
